greve.io/greve.io/ClientApp/src/components/ImageSheet.css
body {
}

.cropImageWindow {
    background: rgba(255, 255, 255, 0.4);
    position: absolute;
    width: 250px;
    height: 250px;
    bottom: 0;
    left: 240px;
    top: 150px;
    /*border: 1px solid black;*/
    background-image: radial-gradient(circle at center, red 5px, transparent 6px), radial-gradient(circle at center, red 5px, transparent 6px), radial-gradient(circle at center, red 5px, transparent 6px), radial-gradient(circle at center, red 5px, transparent 6px);
    background-size: 20px 20px;
    background-position: top right, top left, bottom right, bottom left;
    background-repeat: no-repeat;
}

    .cropImageWindow > img {
        /*max-width: 400px;*/
        /*margin-top: 25px;*/
        /*border: 1px solid black;*/
        /*margin-left: calc(50% - 25px);*/
    }

.glyphicon {
    margin-right: 50px;
}

.form-control-feedback {
    z-index: 3;
}

h1 {
    margin-top: 0;
}

.lockedCropArea {
    background: rgba(255, 0,0, 0.4);
    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 3em;
    position: absolute;
    width: 100%;
    height: 100%;
    bottom: 0;
    /*border: 1px solid black;*/
    background: rgba(255, 255, 255, 0.4);
}

.createSheetButton{
    width: 100%;
    margin-top: 5px;
    margin-bottom: 10px
}

